--- a/src/main/webapp/pages/profile/profile.xhtml
+++ b/src/main/webapp/pages/profile/profile.xhtml
@@ -65,7 +65,7 @@
                 </h:panelGroup>
                
 
-                <glue:input id="showBootcamp" name="showBootcamp" type="checkbox" value="#{profileHome.instance.showBootcamp}" required="true" inlinehelp="#{messages['common.bootcamp.inlinehelp']}" execute="@this save"/>
+                <!--<glue:input id="showBootcamp" name="showBootcamp" type="checkbox" value="# {profileHome.instance.showBootcamp}" required="true" inlinehelp="# {messages['common.bootcamp.inlinehelp']}" execute="@this save"/>-->
 
                 <p:panel rendered="#{not profileHome.instance.persistent}" transient="true">
                     <h:panelGroup id="unm" layout="block" class="clearfix">
