--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -20,7 +20,7 @@
             <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">
-                        <h2>#{medicamentoHome.instance.persistent? messages['common.edit'] : messages['common.add']} #{medicamentoHome.instance.nombreComercial}</h2>   
+                        <h2>#{medicamentoHome.instance.persistent? messages['common.edit'] : messages['common.add']} #{messages['medicamento.Nombre']} #{medicamentoHome.instance.nombreComercial}</h2>   
                     </div>
                 </div>
             </div>
@@ -94,24 +94,21 @@
                             </h:panelGroup>                            
                         </div>
                         <div class="span8">
-                            <glue:input id="casaComercial" name="casaComercial" type="text" label="#{messages['common.casaComercialProveedora']}" value="#{medicamentoHome.instance.casaComercialProveedora}" required="true" inlinehelp="#{messages['common.casacaomercial.inlinehelp']}" execute="@this save" render="casaComercial"/>
-                            <glue:input id="dirCasaComercial" name="dirCasaComercial" type="text" label="#{messages['common.dircasacomercial']}" value="#{medicamentoHome.instance.dirCasaComercial}" required="false" inlinehelp="#{messages['common.dircasacomercial']}" execute="@this save" render="dirCasaComercial"/>
-
                             <h:panelGroup id="fnp1" layout="block" class="clearfix">
-                                <label for="fechaElaboracion">#{messages['medicamento.fecha.elaboracion']}</label>
+                                <label for="fechaElaboracion">#{messages['medicamento.fecha.elaboracion']}*</label>
                                 <div class="input" >
                                     <p:calendar  id="fechaElaboracion" locale="es" value="#{medicamentoHome.instance.fechaElaboracion}" styleClass="xLarge" required="true" label="Fecha de Elaboracion" 
                                                  rendered="true" disabled="false" navigator="true" showButtonPanel="true" disabledWeekends="false" pattern="dd-MM-yyyy" >
-                                        <p:ajax event="dateSelect" rendered="save" update="save" />  
+                                        <p:ajax event="dateSelect" process="fechaIngreso fechaElaboracion validadorFechasI_E" rendered="save" update="save fnp fnp1 form:messages" />  
                                     </p:calendar>                        
                                     <h:graphicImage value="#{resource['success.gif']}" rendered="#{medicamentoHome.instance.fechaElaboracion != null}"
                                                     styleClass="validation-status" />
                                     <span class="help-inline"><br/>#{messages['common.fechaelaboracionmedicamento.lineaAyuda']}<ocp:message forId="fechaElaboracion" /></span>
                                 </div>
                             </h:panelGroup>
-
+                            <s:validateForm id="validadorFechasI_E" validatorId="validadorFechasMed" />
                             <h:panelGroup id="fc" layout="block" class="clearfix">
-                                <label for="fechaCaducidad">#{messages['common.fechacaducidadmedicamento']}</label>
+                                <label for="fechaCaducidad">#{messages['common.fechacaducidadmedicamento']} *</label>
                                 <div class="input" >
                                     <p:calendar  id="fechaCaducidad" value="#{medicamentoHome.instance.fechaCaducidad}" styleClass="xLarge" required="true" label="Fecha de Caducidad" 
                                                  rendered="true" disabled="false" navigator="true" showButtonPanel="false" disabledWeekends="false" locale="es" pattern="dd-MM-yyyy">                            
@@ -121,10 +118,11 @@
                                     <h:graphicImage value="#{resource['success.gif']}" rendered="#{medicamentoHome.instance.fechaCaducidad != null}"
                                                     styleClass="validation-status" />
                                     <span class="help-inline"><br/>#{messages['common.fechacaducidadmedicamento.lineaAyuda']}<ocp:message forId="fechaCaducidad" /></span>
-
                                 </div>                    
                             </h:panelGroup>  
                             <s:validateForm id="validadorFechas" validatorId="validadorFechasMedicamento" />
+                            <glue:input id="casaComercial" name="casaComercial" type="text" label="#{messages['common.casaComercialProveedora']}" value="#{medicamentoHome.instance.casaComercialProveedora}" required="true" inlinehelp="#{messages['common.casacaomercial.inlinehelp']}" execute="@this save" render="casaComercial"/>
+                            <glue:input id="dirCasaComercial" name="dirCasaComercial" type="text" label="#{messages['common.dircasacomercial']}" value="#{medicamentoHome.instance.dirCasaComercial}" required="false" inlinehelp="#{messages['common.dircasacomercial']}" execute="@this save" render="dirCasaComercial"/>                            
                             <glue:input id="referencia" name="referencia" type="textarea" label="#{messages['common.referenciaMedicamento']}" value="#{medicamentoHome.instance.referencia}" 
                                         required="false" inlinehelp="#{messages['common.referenciaMedicamento']}" execute="@this save" render="referencia"/>                            
                             <h:panelGroup id="devp" layout="block" class="clearfix" rendered="#{medicamentoHome.instance.unidades ne 0}">
@@ -132,7 +130,7 @@
                                 <div class="input" >
                                     <p:selectBooleanCheckbox  id="devolucion" value="#{medicamentoHome.devolucion}" required="false" 
                                                               rendered="true" >
-                                        
+
                                     </p:selectBooleanCheckbox>
                                     <h:graphicImage value="#{resource['success.gif']}" rendered="#{not medicamentoHome.devolucion}" styleClass="validation-status" />
                                     <!--<span class="help-inline"><br/>#{messages['medicamento.generico.lineaAyuda']}<ocp:message forId="devolucion" /></span>-->
