--- a/src/main/webapp/pages/labClinico/listaExamenes.xhtml
+++ b/src/main/webapp/pages/labClinico/listaExamenes.xhtml
@@ -12,7 +12,7 @@
             <div class="header-replace">
                 <div class="container-header" >
                     <div class="row lf row-title" >
-                        <h2>#{messages['medicamento.admin']}</h2>   
+                        <h2>#{messages['examenesLabClinico.admin']}</h2>   
                     </div> 
                 </div>   
             </div>            
