--- a/src/main/webapp/pages/secretaria/paciente.xhtml
+++ b/src/main/webapp/pages/secretaria/paciente.xhtml
@@ -8,6 +8,7 @@
       xmlns:p="http://primefaces.org/ui"      
       xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:glue="http://eqaula.org/jsf/facelets"
+      xmlns:s="http://jboss.org/seam/faces"
       xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon">
 
     <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
@@ -47,8 +48,10 @@
                                             <span class="help-inline">#{messages['profile.dni.inlinehelp']}<ocp:message forId="dni" /></span>
                                         </div>
                                     </h:panelGroup>
-                                    <glue:input id="fstn" name="nombres" type="text" label="#{messages['common.firstname']}" value="#{pacienteHome.instance.nombres}" required="true" inlinehelp="#{messages['common.firstname.inlinehelp']}" execute="@this save" render="fstn" styleClass="xLarge"/>
-                                    <glue:input id="srn" name="apellidos" type="text" label="#{messages['common.surname']}" value="#{pacienteHome.instance.apellidos}" required="true" inlinehelp="#{messages['common.surname.inlinehelp']}" execute="@this save"/>                                      
+                                    <glue:input id="fstn" name="nombres" type="text" label="#{messages['common.firstname']}" value="#{pacienteHome.instance.nombres}" validator="stringValidator"
+                                                required="true" inlinehelp="#{messages['common.firstname.inlinehelp']}" execute="@this save" render="fstn" styleClass="xLarge"/>
+                                    <glue:input id="srn" name="apellidos" type="text" label="#{messages['common.surname']}" value="#{pacienteHome.instance.apellidos}" validator="stringValidator"
+                                                required="true" inlinehelp="#{messages['common.surname.inlinehelp']}" execute="@this save"/>                                      
                                     <h:panelGroup id="eml" layout="block" class="clearfix">
                                         <label for="email">#{messages['common.email']} *</label>
                                         <div class="input">
@@ -66,14 +69,15 @@
                                         <label for="fnacim">#{messages['common.fecha.nacimiento']}*</label>
                                         <div class="input" >
                                             <p:calendar  id="fnacim" value="#{pacienteHome.instance.fechaNacimiento}" styleClass="xLarge" required="false" label="edad" 
-                                                         rendered="true" pattern="dd-MM-yyyy" navigator="true" showButtonPanel="true" >
-                                                <p:ajax event="dateSelect" rendered="fnp edadp:edad" update="@parent fnp edadp" />  
+                                                         rendered="true" pattern="dd-MM-yyyy" navigator="true" showButtonPanel="true" > 
+                                                <p:ajax event="dateSelect" process="validadorFechas fnacim" rendered="save fnp edadp:edad" update="@parent fnp edadp" />                                                  
                                             </p:calendar>                             
                                             <h:graphicImage value="#{resource['success.gif']}" rendered="#{pacienteHome.instance.fechaNacimiento != null}"
                                                             styleClass="validation-status" />
                                             <span class="help-inline"><br/>#{messages['common.fecha.nacimiento.lineaAyuda']}<ocp:message forId="fnacim" /></span>
                                         </div>
                                     </h:panelGroup>
+                                    <s:validateForm id="validadorFechas" validatorId="dateValidator" />
                                     <h:panelGroup id="edadp" layout="block" class="clearfix">
                                         <label for="edad">#{messages['common.edad']} *</label>
                                         <div class="input" >
@@ -100,10 +104,12 @@
                                             <span class="help-inline"><br/>#{messages['comun.genero.lineaAyuda']} <ocp:message forId="genero_" /></span>
                                         </div>
                                     </h:panelGroup>
-                                    <glue:input id="dir" name="direccion" type="text" label="#{messages['common.dir']}" value="#{pacienteHome.instance.direccion}" required="false" inlinehelp="#{messages['common.dir.inlinehelp']}" execute="@this save" render="dir" />
-                                    <glue:input id="telf" name="telefono" type="text" label="#{messages['common.telefono']}" value="#{pacienteHome.instance.telefono}" required="false" inlinehelp="#{messages['common.telefono.inlinehelp']}" execute="@this save" render="telf"/>
-                                    <glue:input id="cel" name="celular" type="text" label="#{messages['common.cel']}" value="#{pacienteHome.instance.celular}" required="false" inlinehelp="#{messages['common.cel.inlinehelp']}" execute="@this save" render="cel"/>
-
+                                    <glue:input id="dir" name="direccion" type="text" label="#{messages['common.dir']}" value="#{pacienteHome.instance.direccion}" 
+                                                required="false" inlinehelp="#{messages['common.dir.inlinehelp']}" execute="@this save" render="dir" />
+                                    <glue:input id="telf" name="telefono" type="text" label="#{messages['common.telefono']}" value="#{pacienteHome.instance.telefono}" minLength="7" validateLength="true" validator="digitValidator"
+                                                required="false" inlinehelp="#{messages['common.telefono.inlinehelp']}" execute="@this save" render="telf"/>
+                                    <glue:input id="cel" name="celular" type="text" label="#{messages['common.cel']}" value="#{pacienteHome.instance.celular}" minLength="9" validateLength="true" validator="digitValidator"
+                                                required="false" inlinehelp="#{messages['common.cel.inlinehelp']}" execute="@this save" render="cel"/>
 
                                 </h:panelGroup>
                             </div>
