--- a/src/main/webapp/pages/paciente/reset.xhtml
+++ b/src/main/webapp/pages/paciente/reset.xhtml
@@ -77,7 +77,7 @@
                         <f:ajax execute="@form" render="@form" />
                     </h:commandButton>
                     &nbsp;&nbsp;
-                    <h:link value="#{messages['common.cancel']}" type="button" outcome="home"
+                    <h:link value="#{messages['common.cancel']}" type="button" outcome="/pages/home"
                                          style="margin-top:10px;"/>  
                 </div>
 
