--- a/src/main/webapp/pages/labClinico/examenes.xhtml
+++ b/src/main/webapp/pages/labClinico/examenes.xhtml
@@ -33,7 +33,7 @@
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
                 <glue:input id="codig" name="codig" type="text" label="#{messages['common.code']}" value="#{examenHome.instance.code}" 
                             inlinehelp="#{messages['Examen.codigo.lineaAyuda']}" required="true" execute="@this save" render="codig" styleClass="xLarge"/>
-                <glue:input id="nombre" name="nombre" type="text" label="#{messages['Examen.Nombre1']}" value="#{examenHome.instance.name}" validator="stringValidator"
+                <glue:input id="nombre" name="nombre" type="text" label="#{messages['Examen.Nombre1']}" value="#{examenHome.instance.name}" 
                             inlinehelp="#{messages['Examen.nombre1.lineaAyuda']}" required="true" execute="@this save" render="nombre" styleClass="xLarge"/>                
                 <h:panelGroup layout="block" class="clearfix">
                     <label for="tipo_" class="control-label">#{messages['Examen.Tipo']} *</label>
@@ -56,12 +56,13 @@
 
                 <div class="admin-actions ">
                     <p:commandButton id="save" action="#{examenHome.guardar()}" value="#{messages['common.save']}" styleClass="btn primary offset4" immediate="true"/>
+                    
                     &nbsp;&nbsp;
                     <h:link outcome="/pages/labClinico/listaExamenes.xhtml?faces-redirect=true" 
                             value="#{messages['common.cancel']}" styleClass="btn primary" >                         
                     </h:link>
                 </div>
-            </h:form>
+            </h:form>            
         </ui:define>
     </ui:composition>
 </html>                
