--- a/src/main/webapp/pages/labClinico/listaPedidosExam.xhtml
+++ b/src/main/webapp/pages/labClinico/listaPedidosExam.xhtml
@@ -36,12 +36,16 @@
                                      ajax="true">
                         <p:ajax process="@this" update=":edit-dialog"/>
                     </p:commandButton>                        
-                    #{' '}
+                    #{' '}                    
                     <h:link id="button-edit" value="#{messages['common.add']} #{messages['Examen.resultado']}" rendered="#{true}" outcome="resultadosExamen" styleClass="btn" 
                             disabled="#{ empty pedidoExamenListaServicio.pedidoExamenSeleccionado}">
                         <f:param name="pedidoExamenId" value="#{pedidoExamenListaServicio.pedidoExamenSeleccionado.id}"></f:param>
                         <f:param name="backView" value="listaPedidosExam"></f:param>
-                    </h:link>   
+                    </h:link>  #{' '}
+                    <p:commandLink id="delete" type="button" value="Borrar" title="#{messages['common.delete']}" ajax="true"
+                                   onclick="#{'deletedDlg1.show();'}"  styleClass="btn success" disabled="#{pedidoExamenListaServicio.pedidoExamenSeleccionado.estado ne 'Nuevo'}"> 
+                        <p:ajax process="@this" update=":cancel-dialog1"/>
+                    </p:commandLink>
                     <h:panelGroup style="float: right">
                         <p:calendar id="criterioBuscar" size ="15" value="#{pedidoExamenListaServicio.fecha}" title="Ingrese una fecha"
                                     locale="es" navigator="true" showButtonPanel="true" disabledWeekends="false" >
@@ -68,9 +72,9 @@
            </f:facet>-->
                     <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
                     <p:ajax event="rowSelect" listener="#{pedidoExamenListaServicio.onRowSelect}" 
-                            update=":form:button-edit :form:messages :form:button-add :edit-dialog"/>   
+                            update=":form:button-edit :form:messages :form:button-add :edit-dialog :cancel-dialog1 :form:delete"/>   
                     <p:ajax event="rowUnselect" listener="#{pedidoExamenListaServicio.onRowUnselect}" 
-                            update=":form:button-edit :form:messages :form:button-add :edit-dialog"/>
+                            update=":form:button-edit :form:messages :form:button-add :edit-dialog :cancel-dialog1 :form:delete"/>
                     <!--Columnas para mostrar en la tabla -->
 
                     <p:column  style="width: 10%; text-align: center;" sortBy="#{object_.id}"
@@ -89,18 +93,18 @@
                         </f:facet> 
                         <h:outputText value="#{object_.responsableEmision.fullName}" />
                     </p:column>
-                     <p:column style="text-align: center;" >
+                    <p:column style="text-align: center;" >
                         <f:facet name="header">  
                             <h:outputText value="#{messages['pedido.codMuestra']}" />  
                         </f:facet> 
-                         <h:outputText value="#{object_.codigoMuestra}" />
+                        <h:outputText value="#{object_.codigoMuestra}" />
                     </p:column>
                     <p:column sortBy="#{object_.estado}" style="text-align: center;" ><!--filterMatchMode="contains" filterBy="# {object_.estado}">-->
                         <f:facet name="header">  
                             <h:outputText value="#{messages['comun.estado']}" />  
                         </f:facet> 
                         <h:outputText value="#{object_.estado}" />
-                    </p:column>
+                    </p:column>                    
                 </p:dataTable> 
                 <h:panelGrid id="export" class="columns" >
                     <h:commandLink value="Imprimir" styleClass="btn">  
@@ -125,10 +129,24 @@
                         </p:commandButton> 
                         &nbsp;&nbsp;                        
                         <p:commandButton value="#{messages['common.cancel']}" type="button" onclick="editDlg.hide();" update=":form:tablaPedidos">
-                            <f:setPropertyActionListener target="#{pedidoExamenListaServicio.pedidoExamenSeleccionado}" value="#{null}"/>
                         </p:commandButton>
-                            
+
                     </div>
+                </h:form>
+            </p:dialog>
+            <p:dialog id="cancel-dialog1" header="#{messages['common.delete.confirm']}" widgetVar="deletedDlg1" resizable="false" modal="true">  
+                <h:form id="form-dialog-confirm-delete1">
+
+                    <h:panelGroup layout="block" style="padding:5px;">  
+                        <h:outputText value="#{messages['common.delete.confirm.message']} de Pedido de Exeman #{pedidoExamenListaServicio.pedidoExamenSeleccionado.id}"/>  
+                    </h:panelGroup>  
+                    <p:commandButton value="#{messages['common.yes']}" action="#{pedidoExamenListaServicio.borrar()}" 
+                                     oncomplete="#{'deletedDlg1.hide();'}" update=":form:tablaPedidos" immediate="true" ajax="true"
+                                     style="margin-top:10px;" >                          
+                    </p:commandButton>  
+                    <p:commandButton value="#{messages['common.no']}" type="button" onclick="deletedDlg1.hide();"  
+                                     style="margin-top:10px;"/>  
+
                 </h:form>
             </p:dialog>
         </ui:define>
