--- a/src/main/webapp/pages/labClinico/pedidoE.xhtml
+++ b/src/main/webapp/pages/labClinico/pedidoE.xhtml
@@ -58,20 +58,199 @@
                         </div>
                     </div>
                 </p:panel>
-                <p:panel id="panelPrescripcion" header="Ingreso de datos"  rendered="true">
-                    <h:panelGroup id="obEFP" >
-                        <label for="pickExamLab" style="width: 40%">#{messages['pedidoLabClinico.admin']}</label><br/><br/>
-                        <p:pickList id="pickExamLab" value="#{pedidoExamenLabHome.pickListExamenesLab}" var="examenLab_"  showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains"  style="width: 50%"
-                                    itemLabel="#{examenLab_.code} #{examenLab_.name}" itemValue="#{examenLab_}" converter="examenLabClinicoConverter" showCheckbox="true">  
-                            <f:facet name="sourceCaption">#{messages['Examen.listado']} #{messages['Examen.nombres']}</f:facet>
-                            <f:facet name="targetCaption">#{messages['Examen.nombres']} #{'a realizar'}</f:facet>
-                            <p:ajax event="transfer" listener="#{pedidoExamenLabHome.onTransfer}" update=":form:messages :form:save" />  
- 
-                            <p:column style="width: 100%" >
-                                <h:outputText value="#{examenLab_.code}&nbsp;&nbsp;#{examenLab_.name}" />                                        
-                            </p:column>
-                        </p:pickList>
-                    </h:panelGroup> 
+                <p:panel id="panelPrescripcion" header="Listado de Examenes disponibles"  rendered="true">
+                    <div class="container-fluid" >
+                        <div class="row-fluid" >
+                            <div class="span4"  style="width: 25%;">
+                                <p:panel header="HEMATOLÓGICOS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam_.tipo.tipo eq 0}">                                    
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="BIOQUIMÍCO Y ENZIMÁTICOS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam1_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam1_.tipo.tipo eq 1}">                                                                            
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam1_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam1_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam1_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="ELECTROLITOS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam3_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam3_.tipo.tipo eq 2}">                                                                            
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam3_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam3_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam3_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                 
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="MARCADORES TUMORALES" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam4_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam4_.tipo.tipo eq 3}">                                                                            
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam4_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam4_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam4_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="HORMONAS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam5_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam5_.tipo.tipo eq 4}">                                                                            
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam5_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam5_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam5_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="INMUNOLÓGICOS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam2_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam2_.tipo.tipo eq 5}">                                                                            
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam2_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam2_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam2_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="LÍQUIDOS BIOLÓGICOS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam6_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam6_.tipo.tipo eq 6}">   
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam6_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam6_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam6_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;"> 
+                                <p:panel header="ORINA" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam7_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam7_.tipo.tipo eq 7}">   
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam7_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam7_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam7_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="HECES" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam8_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam8_.tipo.tipo eq 8}">   
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam8_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam8_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam8_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="SECRECIONES" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam9_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam9_.tipo.tipo eq 9}">   
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam9_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam9_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam9_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                            <div class="span4" style="width: 25%;">
+                                <p:panel header="OTROS" >
+                                    <c:forEach items="#{pedidoExamenLabHome.listaExamenLab}" var="exam10_"  >
+                                        <c:choose>
+                                            <c:when test="#{exam10_.tipo.tipo eq 10}">   
+                                                <span >                                            
+                                                    <p:selectBooleanCheckbox value="#{exam10_.select}" >
+                                                        <p:ajax update="save :form:messages" listener="#{pedidoExamenLabHome.agregarExamen(exam10_)}"/>
+                                                    </p:selectBooleanCheckbox>&nbsp;
+                                                    <h:outputText value="#{exam10_.name}" />
+                                                </span>
+                                                <br/>
+                                            </c:when>                                
+                                        </c:choose>                            
+                                    </c:forEach>
+                                </p:panel>
+                            </div>
+                        </div>
+                    </div>
+                    <br/>
                     <glue:input id="observ" name="observ" type="textarea" label="#{messages['consultaMedica.observacion']}" value="#{pedidoExamenLabHome.instance.observacion}" 
                                 helpinline="#{messages['consultaMedica.observacion']}"  
                                 required="false" execute="@this save" render="observ" styleClass="xLarge" disabled="false"/>
@@ -79,13 +258,31 @@
                 <div class="admin-actions ">
                     <p:commandButton id="save" action="#{pedidoExamenLabHome.guardar()}" value="#{messages['common.submit']}" 
                                      update=":form:messages" styleClass="btn primary" style="margin-left: 32%" immediate="true"
-                                     disabled="#{empty   pedidoExamenLabHome.pickListExamenesLab.target}"/>
+                                     disabled="#{empty pedidoExamenLabHome.listaPedidoExamenLabC}"/>
+                    &nbsp;
+                    <p:commandButton value="Ver" oncomplete="deletedDlg.show();" update=":cancel-dialog"/> 
+                    &nbsp;
+                    <h:link outcome="/pages/labClinico/pedidoE?faces-redirect=true"
+                            value="Limpiar" styleClass="btn primary" >                        
+                        <f:param name="backView" value="#{pedidoExamenLabHome.backView}"/>
+                        <f:param name="pacienteId" value="#{pedidoExamenLabHome.paciente.id}" />
+                    </h:link>
                     &nbsp;
                     <h:link outcome="/pages#{pedidoExamenLabHome.backView}?faces-redirect=true"
                             value="#{messages['common.cancel']}" styleClass="btn primary" >                        
                     </h:link>   
                 </div>
             </h:form>
+            <p:dialog id="cancel-dialog" header="Ver Examenes seleccionados" widgetVar="deletedDlg" resizable="false" modal="true">  
+                <h:form id="form-dialog-confirm-delete">
+                    <ui:repeat value="#{pedidoExamenLabHome.listaPedidoExamenLabC}" var="p1">
+                        <h:outputText value="#{p1.name} -- #{p1.tipo}"/>  
+                        <br/>
+                    </ui:repeat>                  
+                    <p:commandButton value="#{messages['common.cancel']}" type="button" onclick="deletedDlg.hide();"  
+                                     style="margin-top:10px;"/>  
+                </h:form>
+            </p:dialog> 
         </ui:define>
     </ui:composition>
 </html>                
